# IMAGE_MARKER

./: CMakeLists.txt  LICENSE  README.md  image_marker_plugin_description.xml  package.xml
include/: image_marker.h
src/: image_marker.cpp  image_publisher.py
